# gen-rs

./: Cargo.toml  README.md
src/: lib.rs  structs.rs
src/utils/: core_generator.rs  error_handler.rs  image_constructor.rs  layer_constructor.rs  metadata_constructor.rs  mod.rs
test/: gen-rb.vanilla.test.html  gen-rs.vanilla.test.html
