[package]
name = "gen-rs"
version = "0.1.0"
authors = ["Stephen Asuncion"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
image = "0.24.3"
js-sys = "0.3.59"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.23"
base64 = "0.13.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
rand = "0.8.5"
photon-rs = "0.3.1"
chrono = "0.4.22"

[dependencies.web-sys]
version = "0.3.59"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "HtmlCanvasElement",
  "Window",
  "console",
  "ImageData",
  "Response",
  "Performance",
  "PerformanceTiming"
]